# F1_P10_Game_backend

./: README.md  docker-compose.yml  pyproject.toml
Docker/development/: Dockerfile
scripts/: start.sh
src/: main.py
src/routers/: healthcheck.py
tests/: conftest.py  test_api_health.py
